<resources>
    <string name="app_name">Lab01</string>
    <!-- Strings related to login -->
    <string name="cedula">Cedula</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Nombre de usuario invalido</string>
    <string name="invalid_cedula">Cedula invalida</string>
    <string name="invalid_email">Email invalido</string>
    <string name="invalid_phone">Telefono invalido</string>
    <string name="invalid_password">La clave debe ser mayor a 5 caracteres</string>
    <string name="login_failed">"Acceso denegado"</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profesores">Profesores</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_logout">Salir</string>

    <string name="home_second">Home Second</string>
    <string name="imagen">IMAGEN</string>
    <string name="buscar">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre</string>
    <string name="phone">Telefono</string>
    <string name="email">Email</string>
    <string name="curso">Curso</string>
    <string name="guardar">Guardar</string>
</resources>
