<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profesores">

    <fragment
        android:id="@+id/nav_profesores"
        android:name="com.example.lab01.ui.profesores.Profesor.ProfesorFragment"
        android:label="@string/menu_profesores"
        tools:layout="@layout/fragment_profesores">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.lab01.ui.profesores.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_profesores" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_cursos"
        android:name="com.example.lab01.ui.cursos.CursoFragment"
        android:label="@string/menu_cursos"
        tools:layout="@layout/fragment_cursos" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.lab01.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>